re PR c++/33208 (Broken diagnostic: 'component_ref' not supported by dump_decl)

/cp
2007-09-02  Paolo Carlini  <pcarlini@suse.de>

	PR c++/33208
	* typeck.c (build_unary_op): Fix error message for
	Boolean expression as operand to operator--.

/testsuite
2007-09-02  Paolo Carlini  <pcarlini@suse.de>

	PR c++/33208
	* g++.dg/other/error18.C: New.
	* g++.dg/expr/bitfield3.C: Adjust.

From-SVN: r128025